PackageBlockEntity no longer extends Container